<resources>
    <string name="app_name">BudgetPerso</string>
    <string name="budgetperso">Budget Perso</string>
    <string name="depenses">Dépenses</string>
    <string name="shop">Courses</string>
    <string name="location">Loyer</string>
    <string name="car">Transport</string>
    <string name="scool">Etudes</string>
    <string name="travel">Voyage</string>
    <string name="tv">TV</string>
    <string name="wifi">Wifi</string>
    <string name="electric">Electricité</string>
    <string name="gas_oil">Gaz</string>
    <string name="animal">Animal</string>
    <string name="epargne">Epargne</string>
    <string name="Sup_entre">Revenu Sup</string>
    <string name="revenu_total">Revenu Total</string>
    <string name="revenu_principal">Revenu Principal</string>
    <string name="ttcpt">132.OOO.000 FCFA</string>
    <string name="logob">Logo blanc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget_fragment">Budget fragment</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="notification">notification</string>
    <string name="user">user</string>
    <string name="next">suivant</string>
    <string name="preview">précédent</string>
    <string name="mois">Date</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="param">Settings</string>
    <string name="nav_header_desc">logo</string>
    <string name="center">center</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="user_email">Email</string>
    <string name="profile_image_description">description</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="price">prix</string>
    <string name="saisir_les_donn_es">Saisir les données</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="esp_ces">Espèces</string>
    <string name="_15000_fcfa">15000 FCFA</string>
    <string name="compte_courant">Compte Courant</string>
    <string name="_655_000_fcfa">655.000 FCFA</string>
    <string name="compte_epargne">Compte Epargne</string>
    <string name="_350_000_fcfa">350.000 FCFA</string>
    <string name="g_rer_les_comptes">Gérer les comptes</string>
    <string name="revenus">Revenus</string>
    <string name="d_penses">Dépenses</string>
    <string name="reste">Reste</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="transfert">transfert de fonds</string>
    <string name="totaltile">Total TC</string>


</resources>