<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:contentDescription="@string/logob" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:text="@string/price"
        android:textSize="10sp"/>

</LinearLayout>
